Move CI test to example/test.sh

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,10 +26,4 @@ jobs:
         id: example
         run: |
           cd ./example
-          if [ "$(uname)" == "Darwin" ]; then
-            CONF="darwinConfigurations.default"
-          else
-            CONF="nixosConfigurations.example1"
-          fi
-          nix build .#${CONF}.config.system.build.toplevel
-          ls result/
+          ./test.sh
