Explicitly specify macos arch (#6)
And remove `system` from specialArgs (it can be inferred from `pkgs.system` anyway).

The CI now builds for macos.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,8 +8,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        # TODO: Add macos-latest after https://github.com/srid/nixos-flake/issues/4
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -26,4 +25,6 @@ jobs:
         id: example
         run: |
           cd ./example
+          # Github Action runners do not support M1 yet.
+          nix run nixpkgs#sd mkARMMacosSystem mkIntelMacosSystem flake.nix
           ./test.sh
