--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,3 +32,7 @@ jobs:
           pushd ./examples/linux
           ./test.sh
           popd
+
+          pushd ./examples/macos
+          ./test.sh
+          popd
