--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,6 @@ jobs:
         id: examples
         run: |
           # Github Action runners do not support M1 yet.
-          nix run nixpkgs#sd mkARMMacosSystem mkIntelMacosSystem ./examples/*/flake.nix
+          nix run nixpkgs#sd 'nixpkgs.system = "aarch64-darwin"' 'nixpkgs.system = "x86_64-darwin"' ./examples/*/flake.nix
 
-          nix run github:srid/nixci
+          nix run nixpkgs#nixci
