--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
      - uses: actions/checkout@v4
      - id: set-matrix
-       run: echo "matrix=$(nixci dump-github-actions-matrix --systems=aarch64-linux,aarch64-darwin | jq -c .)" >> $GITHUB_OUTPUT
+       run: echo "matrix=$(nixci gh-matrix --systems=aarch64-linux,aarch64-darwin | jq -c .)" >> $GITHUB_OUTPUT
   nix:
     runs-on: self-hosted
     needs: configure
@@ -30,4 +30,4 @@ jobs:
             'nixpkgs.hostPlatform = "aarch64-linux"' \
             ./examples/*/flake.nix
 
-          nixci build --build-systems "github:nix-systems/${{ matrix.system }}" .#default.${{ matrix.subflake}}
+          nixci build --systems "github:nix-systems/${{ matrix.system }}" .#default.${{ matrix.subflake}}
