--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
         "b4dm4n.nixpkgs-fmt",
         "jnoortheen.nix-ide",
         "mattn.lisp",
-        "mkhl.direnv"
+        "mkhl.direnv",
+        "thenuprojectcontributors.vscode-nushell-lang"
     ]
 }
